--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -43,7 +43,7 @@
                         
                         <hr>
                         <div class="form-group ">
-                            <input type="button" class="btn btn-primary btn-lg px-4" value="REGISTRAR">
+                            <input type="button" class="btn btn-primary btn-lg bg-gradient-primary" value="REGISTRAR">
                         </div>
 
                     </form>
