--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,25 +18,22 @@
                                 <div class="text-center">
                                     <img src="assets/img/logoT.png" alt="">
                                 </div>
-                                <form class="user" action="registrarse.html">
+                                <form class="user" action="auth" method="post">
                                     <div class="form-group">
-                                        <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Correo Electrónico...">
+                                        <input type="email" class="form-control form-control-user" name="user" id="user" placeholder="Correo Electrónico..." required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Contraseña...">
+                                        <input type="password" class="form-control form-control-user" name="pass" id="pass" placeholder="Contraseña..." required>
                                     </div>
+                                    <hr>
+                                    <div class="form-group">
+                                       <input type="submit" class="btn btn-primary btn-user btn-block" value="Iniciar Sesión">
+                                    </div>
+                                    
 
-                                    <div class="form-group">
-                                        <div class="custom-control custom-checkbox small">
-                                            <input type="checkbox" class="custom-control-input" id="customCheck">
-                                            <label class="custom-control-label text-white" for="customCheck">Remember
-                                                    Me</label>
-                                        </div>
-                                    </div>
-                                    <a class="btn btn-primary btn-user btn-block" href="/admin">
-                                            Iniciar Sesión
-                                        </a>
                                 </form>
+
+                                
                                 <hr>
                                 <div class="text-center text-white">
                                     <a class="text-white" href="forgot-password.html">Forgot Password?</a> .
