--- a/views/partials/modalLogin.hbs
+++ b/views/partials/modalLogin.hbs
@@ -30,26 +30,13 @@
                             <input type="password" class="form-control form-control-user" name="pass" placeholder="Contraseña...">
                         </div>
                         <hr>
-                         <input type="submit" class="btn btn-primary btn-user btn-block" value="Iniciar Sesión">
+                         <input type="submit" class="btn btn-primary btn-user btn-block" value="Crear Cuenta">
                     </form>
                 </div>
 
             </div>
         </div>
     </div>
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    {{#if alert}}
-        <script>
-        Swal.fire({
-            title: 'Registro',
-            text: '{{alertMessage}}',
-            icon: 'success',
-            showConfirmButton: false,
-            timer: 1500
-        }).then(()=>{
-            window.location = '/'
-        })
-    </script>
-    {{/if}}
+  
 
   
