--- a/views/partials/topbar.hbs
+++ b/views/partials/topbar.hbs
@@ -1,3 +1,4 @@
+
 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
@@ -17,7 +18,9 @@
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-lg-inline text-gray-600 small">Jefry Navas</span>
+                                <span class="mr-2 d-lg-inline text-gray-600 small">
+                                        <strong>{{name}}</strong>
+                                </span>
                                 <i class="fas fa-user"></i>
                             </a>
                             <!-- Dropdown - User Information -->
@@ -35,6 +38,7 @@
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                                 </a>
+                                
                             </div>
                         </li>
 
