--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -1,15 +1,21 @@
 {{> header }}
-
 <body id="page-top">
     <div id="wrapper">
-        {{> sidebar}}
+        {{#ifEquals tipo "2"}}
+            {{> sidebarEmpleado}}
+        {{/ifEquals}}
+        {{#ifEquals tipo "1"}}
+            {{> sidebarAdmin}}
+        {{/ifEquals}}
+        
+        
         <div id="content-wrapper" class="d-flex flex-column">
             <div id="content">
                 {{> topbar}}
                 <div class="container-fluid">
 
                 <!-- Page Heading -->
-                <h1 class="h3 mb-4 text-gray-800">Registrar Cliente {{titulo.asd}}</h1>
+                <h1 class="h3 mb-4 text-gray-800">Registrar Cliente</h1>
 
                     <form class="user text-center" action="registrarse.html">
                         <div class="row">
@@ -62,6 +68,4 @@
     {{> modalSalir}}   
 {{> scripts}} 
 </body>
-
-
 </html>
