--- a/views/empleado.hbs
+++ b/views/empleado.hbs
@@ -1,14 +1,14 @@
 {{> header }}
 <body id="page-top">
     <div id="wrapper">
-        {{> sidebarAdmin}}
+        {{> sidebarEmpleado}}
         <div id="content-wrapper" class="d-flex flex-column">
             <div id="content">
                 {{> topbar}}
                 <div class="container-fluid">
 
                 <!-- Page Heading -->
-                <h1 class="h3 mb-4 text-gray-800">Blank Page {{ name }}</h1>
+                <h1 class="h3 mb-4 text-gray-800">Bienvenido {{ name }}</h1>
 
             </div>
             </div>
