--- a/views/producto.hbs
+++ b/views/producto.hbs
@@ -2,7 +2,12 @@
 
 <body id="page-top">
     <div id="wrapper">
-        {{> sidebar}}
+        {{#ifEquals tipo "2"}}
+            {{> sidebarEmpleado}}
+        {{/ifEquals}}
+        {{#ifEquals tipo "1"}}
+            {{> sidebarAdmin}}
+        {{/ifEquals}}
         <div id="content-wrapper" class="d-flex flex-column">
             <div id="content">
                 {{> topbar}}
