--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -8,7 +8,10 @@
                 <div class="container-fluid">
 
                 <!-- Page Heading -->
-                <h1 class="h3 mb-4 text-gray-800">Blank Page {{ name }}</h1>
+                <h1 class="h3 mb-4 text-gray-800">Bienvenido al Dashboard {{ name }} de InVirtualStore</h1>
+                <div align ="center">
+                    <img src="assets/img/admin.jpg" alt="" width="50%" height="50%">
+                </div>
 
             </div>
             </div>
