--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -40,6 +40,9 @@
                         <div class="form-group">
                             <select class="form-control" style="border-radius: 10rem">
                                 <option selected>Medio de compra...</option>
+                                <option>WhatsApp</option>
+                                <option>Facebook Messenger</option>
+                                <option>Instagram</option>
                             </select>
                         </div>
                             </div>
