--- a/views/empleado.hbs
+++ b/views/empleado.hbs
@@ -9,11 +9,13 @@
 
                 <!-- Page Heading -->
                 <h1 class="h3 mb-4 text-gray-800">Bienvenido {{ name }}</h1>
+                <div align ="center">
+                    <img src="assets/img/empleado.jpg" alt="" width="50%" height="50%">
+                </div>
+                
 
             </div>
-            </div>
-
-            
+            </div>         
         {{> footer}}   
         </div>
     </div>
