--- a/views/login.hbs
+++ b/views/login.hbs
@@ -58,7 +58,7 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3 text-white">© {{ getAnio }} Copyright:
-            <a href="https://mdbootstrap.com/" class="text-white"> MDBootstrap.com</a>
+            <a href="" class="text-white"> InVirtualNetworks</a>
         </div>
         <!-- Copyright -->
     </footer> 
