--- a/views/producto.hbs
+++ b/views/producto.hbs
@@ -33,7 +33,7 @@
                             <div class="col-sm-12 col-lg-6">
                                 <div class="form-group">
                             <select class="form-control" style="border-radius: 10rem">
-                                <option selected>Material...</option>
+                                <option selected>Material (Opcional)...</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -53,6 +53,9 @@
                         <div class="form-group">
                             <select class="form-control" style="border-radius: 10rem">
                                 <option selected>Origen...</option>
+                                <option>Estados Unidos</option>
+                                <option>Ecuador</option>
+                                <option>China</option>
                             </select>
                         </div>
                         <div class="form-group">
