--- a/views/partials/sidebarAdmin.hbs
+++ b/views/partials/sidebarAdmin.hbs
@@ -34,13 +34,19 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/producto">
-                    <i class="fas fa-fw fa-chart-area"></i>
+                    <i class="fas fa-fw fa-box"></i>
                     <span>Registrar Producto</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/pedido">
-                    <i class="fas fa-fw fa-chart-area"></i>
+                    <i class="fas fa-fw fa-cash-register"></i>
                     <span>Registrar Pedido</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="/proveedor">
+                    <i class="fas fa-fw fa-caravan"></i>
+                    <span>Registrar Proveedor</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
