--- a/views/partials/sidebarEmpleado.hbs
+++ b/views/partials/sidebarEmpleado.hbs
@@ -23,12 +23,12 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/producto">
-                    <i class="fas fa-fw fa-chart-area"></i>
+                    <i class="fas fa-fw fa-box"></i>
                     <span>Registrar Producto</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/pedido">
-                    <i class="fas fa-fw fa-chart-area"></i>
+                    <i class="fas fa-fw fa-cash-register"></i>
                     <span>Registrar Pedido</span></a>
             </li>
             <li class="nav-item">
