--- a/views/producto.hbs
+++ b/views/producto.hbs
@@ -26,7 +26,12 @@
                             <input type="text" class="form-control" placeholder="Nombre del Producto...">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Proveedor...">
+                            <select class="form-control" style="border-radius: 10rem">
+                                <option selected>Proveedor...</option>
+                                {{#each prov}}
+                                <option value={{this.cod_prov}}>{{this.nombre_prov}}</option>
+                                {{/each}}
+                            </select>
                         </div>
                         <hr> Detalles Generales <hr>
                         <div class="row">
@@ -63,9 +68,7 @@
                         </div>
                           
                             </div>
-                        </div>
-                        
-                        
+                        </div>                     
                         <hr>
                         <div class="form-group">
                             <div class="row">
@@ -95,8 +98,6 @@
         {{> footer}}   
         </div>
     </div>
-    
-
     {{> modalSalir}}   
 {{> scripts}} 
 </body>
