--- a/views/partials/sidebarAdmin.hbs
+++ b/views/partials/sidebarAdmin.hbs
@@ -51,9 +51,18 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="/tableUser">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tablas de Resumen</span></a>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    aria-expanded="true" aria-controls="collapseTwo">
+                    <i class="fas fa-table"></i>
+                    <span>Tablas</span>
+                </a>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Tablas Contenido:</h6>
+                        <a class="collapse-item" href="/tableUser">Usuarios</a>
+                        <a class="collapse-item" href="/tableProvee">Proveedores</a>
+                    </div>
+                </div>
             </li>
 
             <!-- Divider -->
