--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -6,9 +6,7 @@
         {{/ifEquals}}
         {{#ifEquals tipo "1"}}
             {{> sidebarAdmin}}
-        {{/ifEquals}}
-        
-        
+        {{/ifEquals}}      
         <div id="content-wrapper" class="d-flex flex-column">
             <div id="content">
                 {{> topbar}}
@@ -17,28 +15,28 @@
                 <!-- Page Heading -->
                 <h1 class="h3 mb-4 text-gray-800">Registrar Cliente</h1>
 
-                    <form class="user text-center" action="registrarse.html">
+                    <form class="user text-center" action="regcli" method="POST">
                         <div class="row">
                             <div class="col-sm-12 col-lg-6">
                                 <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Nombre y Apellido...">
+                            <input type="text" class="form-control" placeholder="Nombre y Apellido..." name="name">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Cédula...">
+                            <input type="text" class="form-control" placeholder="Cédula..." name="ced">
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="E-mail...">
+                            <input type="email" class="form-control" placeholder="E-mail..." name="email">
                         </div>
                             </div>
                             <div class="col-sm-12 col-lg-6">
                                 <div class="form-group">
-                            <input type="number" class="form-control" placeholder="Edad...">
+                            <input type="number" class="form-control" placeholder="Edad..." name="edad">
                         </div>
                         <div class="form-group">
-                            <input type="number" class="form-control" placeholder="Teléfono...">
+                            <input type="number" class="form-control" placeholder="Teléfono..." name="tel">
                         </div>
                         <div class="form-group">
-                            <select class="form-control" style="border-radius: 10rem">
+                            <select class="form-control" style="border-radius: 10rem" name="medio">
                                 <option selected>Medio de compra...</option>
                                 <option>WhatsApp</option>
                                 <option>Facebook Messenger</option>
@@ -46,28 +44,18 @@
                             </select>
                         </div>
                             </div>
-                        </div>
-
-                        
-                        
+                        </div>                                            
                         <hr>
                         <div class="form-group ">
-                            <input type="button" class="btn btn-primary btn-lg bg-gradient-primary" value="REGISTRAR">
+                            <input type="submit" class="btn btn-primary btn-lg bg-gradient-primary" value="REGISTRAR">
                         </div>
-
                     </form>
-                </div>
-                
-
-
+                </div>              
             </div>
-
-            
         {{> footer}}   
         </div>
     </div>
     
-
     {{> modalSalir}}   
 {{> scripts}} 
 </body>
