--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -19,28 +19,37 @@
                         <div class="row">
                             <div class="col-sm-12 col-lg-6">
                                 <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Nombre y Apellido..." name="name">
+                            <input type="text" class="form-control" placeholder="Nombre y Apellido..." name="name"required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Cédula..." name="ced">
+                            <input type="text" class="form-control" placeholder="Cédula..." name="ced" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="E-mail..." name="email">
+                            <input type="email" class="form-control" placeholder="E-mail..." name="email" required>
                         </div>
                             </div>
                             <div class="col-sm-12 col-lg-6">
                                 <div class="form-group">
-                            <input type="number" class="form-control" placeholder="Edad..." name="edad">
+                            <input type="number" class="form-control" placeholder="Edad..." name="edad" required>
                         </div>
                         <div class="form-group">
-                            <input type="number" class="form-control" placeholder="Teléfono..." name="tel">
+                            <input type="number" class="form-control" placeholder="Teléfono..." name="tel" required  minlength="7"  maxlength="10"> 
                         </div>
                         <div class="form-group">
-                            <select class="form-control" style="border-radius: 10rem" name="medio">
+                            <select class="form-control" style="border-radius: 10rem" name="medio" required>
                                 <option selected>Medio de compra...</option>
                                 <option>WhatsApp</option>
                                 <option>Facebook Messenger</option>
                                 <option>Instagram</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <select class="form-control" style="border-radius: 10rem" name="genero" required>
+                                <option selected>Género...</option>
+                               {{#each genero}}
+                                <option value={{this.id_gen}}>{{this.genero}}</option>
+                                {{/each}}
                             </select>
                         </div>
                             </div>
@@ -59,4 +68,18 @@
     {{> modalSalir}}   
 {{> scripts}} 
 </body>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    {{#if alert}}
+        <script>
+        Swal.fire({
+            title: '{{alertTitle}}',
+            text: '{{alertMessage}}',
+            icon: '{{icon}}',
+            showConfirmButton: '{{showConfirmButton}}',
+            timer: '{{timer}}'
+        }).then(()=>{
+            window.location = '/{{ruta}}'
+        })
+    </script>
+    {{/if}}
 </html>
