--- a/views/partials/sidebarAdmin.hbs
+++ b/views/partials/sidebarAdmin.hbs
@@ -61,6 +61,7 @@
                         <h6 class="collapse-header">Tablas Contenido:</h6>
                         <a class="collapse-item" href="/tableUser">Usuarios</a>
                         <a class="collapse-item" href="/tableProvee">Proveedores</a>
+                        <a class="collapse-item" href="/tableClientes">Clientes</a>
                     </div>
                 </div>
             </li>
