--- a/views/pedido.hbs
+++ b/views/pedido.hbs
@@ -10,7 +10,7 @@
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-4 text-gray-800">Registro del Pedido</h1>
-                    <form action="buscarcli" method="POST">
+                    <form action="/buscarcli" method="POST">
                         <div class="row">
                             <div class="col-6">
                                 <div class="form-group">
